--- a/style.css
+++ b/style.css
@@ -1,20 +1,66 @@
+*{
+    font-family: Arial, Helvetica, sans-serif;
+    margin: 0;
+}
+
 .container{
     display: grid;
     grid-template-columns: 1fr 3fr;
-    grid-template-rows: 1fr 3fr;
+    
 }
 
 .sidebar{
     grid-column: 1 / 2;
     grid-row: 1 / 3;
+    background-color: #534f7f;
+    color: white;
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    gap: 50px
+}
+
+.sidebar img{
+    filter: invert(100%) sepia(0%) saturate(7500%) 
+        hue-rotate(12deg) brightness(100%) contrast(109%);
+    width: 20px;
+}
+
+.logo{
+    display: flex;
+    gap: 10px;
+    align-items: center;
+}
+
+.logo > img{
+    width: 40px;
+}
+
+.logo > h1{
+    font-size: 20px;
+}
+
+.main,
+.secondary{
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    margin-left: 10px;
+}
+
+.item{
+    display: flex;
+    gap: 20px;
+}
+
+.item h2{
+    font-size: 15px;
 }
 
 .header{
     grid-column: 2 / 3;
-    grid-row: 2 / 3;
 }
 
 .dashboard{
     grid-column: 2 / 3;
-    grid-row: 2 / 3;
 }
