--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
 *{
     font-family: Arial, Helvetica, sans-serif;
     margin: 0;
+    --lightpurple: #e5e4f0;
+    --purple: #9f7fa6;
+    --darkpurple: #534f7f;
 }
 
 .container{
@@ -12,7 +15,7 @@
 .sidebar{
     grid-column: 1 / 2;
     grid-row: 1 / 3;
-    background-color: #534f7f;
+    background-color: var(--darkpurple);
     color: white;
     padding: 10px;
     display: flex;
@@ -60,6 +63,11 @@
 .header{
     grid-column: 2 / 3;
     padding: 15px 30px;
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+    row-gap: 15px;
+    box-shadow: 5px 0px 3px 3px #cccbd6;
+    z-index: 9999;
 }
 
 .top{
@@ -83,7 +91,7 @@
 }
 
 .search input{
-    background-color: lightgray;
+    background-color: var(--lightpurple);
     border: none;
     border-radius: 20px;
     width: 100%;
@@ -98,6 +106,46 @@
     gap: 15px;
 }
 
+.bottom{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.greeting{
+    display: flex;
+    align-items: center;
+    gap: 15px;
+}
+
+.greeting img{
+    width: 50px;
+}
+
+.greeting p{
+    font-size: 12px;
+    font-weight: bold;
+}
+
+.greeting h1{
+    font-size: 18px;
+}
+
+.actions{
+    display: flex;
+    gap: 15px;
+}
+
+.actions button{
+    background-color: var(--darkpurple);
+    color: white;
+    font-weight: bold;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 20px;
+}
+
 .dashboard{
     grid-column: 2 / 3;
+    background-color: var(--lightpurple);
 }
