--- a/style.css
+++ b/style.css
@@ -148,4 +148,63 @@
 .dashboard{
     grid-column: 2 / 3;
     background-color: var(--lightpurple);
+    padding: 30px 20px;
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    gap: 15px 15px;
+}
+
+.dashboard h2{
+    font-size: 16px;
+    font-weight: 600;
+}
+
+.projects{
+    grid-column: 1 / 2;
+    grid-row: 1 / 3;
+    
+}
+
+.project-cards{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    gap: 15px;
+}
+
+.card{
+    background-color: white;
+    border-radius: 8px;
+}
+
+.card.purple{
+    padding: 30px;
+}
+
+.card.purple h3{
+    font-size: 15px;
+}
+
+.card.purple p{
+    font-size: 12px;
+    color: gray;
+}
+
+.card.purple img{
+    width: 20px;
+}
+
+.announcments{
+    grid-column: 2 / 3;
+    grid-row: 1 / 2;
+}
+
+.trending{
+    grid-column: 2 / 3;
+    grid-row: 2 / 3;
+}
+
+.trending img{
+    width: 30px;
 }
