--- a/style.css
+++ b/style.css
@@ -138,10 +138,13 @@
 
 .actions button{
     background-color: var(--darkpurple);
+    font-size: 12px;
     color: white;
     font-weight: bold;
+    width: 75px;
     border: none;
-    padding: 10px 20px;
+    padding-top: 8px;
+    padding-bottom: 8px;
     border-radius: 20px;
 }
 
