--- a/style.css
+++ b/style.css
@@ -154,8 +154,8 @@
     padding: 30px 20px;
     display: grid;
     grid-template-columns: 2fr 1fr;
-    grid-template-rows: 1fr 1fr;
-    gap: 15px 15px;
+    grid-template-rows: 50% 50%;
+    gap: 0px 15px;
 }
 
 .dashboard h2{
@@ -163,12 +163,17 @@
     font-weight: 600;
 }
 
-.projects{
-    grid-column: 1 / 2;
-    grid-row: 1 / 3;
+.projects,
+.announcements,
+.trending{
     display: flex;
     flex-direction: column;
     gap: 10px;
+}
+
+.projects{
+    grid-column: 1 / 2;
+    grid-row: 1 / 3;
 }
 
 .project-cards{
@@ -210,9 +215,32 @@
     width: 18px;
 }
 
+.white.card{
+    padding: 30px;
+}
+
 .announcments{
     grid-column: 2 / 3;
     grid-row: 1 / 2;
+}
+
+.announcements .white.card{
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+}
+
+hr{
+    border-color: 1px solid #f5f5f5;
+}
+
+.announcements .message h3{
+    font-size: 12px;
+}
+
+.announcements .message p{
+    font-size: 10px;
+    color: gray;
 }
 
 .trending{
