--- a/style.css
+++ b/style.css
@@ -154,8 +154,7 @@
     padding: 30px 20px;
     display: grid;
     grid-template-columns: 2fr 1fr;
-    grid-template-rows: 50% 50%;
-    gap: 0px 15px;
+    gap: 15px;
 }
 
 .dashboard h2{
@@ -173,7 +172,6 @@
 
 .projects{
     grid-column: 1 / 2;
-    grid-row: 1 / 3;
 }
 
 .project-cards{
@@ -215,19 +213,21 @@
     width: 18px;
 }
 
-.white.card{
-    padding: 30px;
+.column2{
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
 }
 
 .announcments{
     grid-column: 2 / 3;
-    grid-row: 1 / 2;
 }
 
 .announcements .white.card{
     display: flex;
     flex-direction: column;
     gap: 15px;
+    padding: 30px;
 }
 
 hr{
@@ -245,7 +245,6 @@ hr{
 
 .trending{
     grid-column: 2 / 3;
-    grid-row: 2 / 3;
 }
 
 .trending img{
