--- a/style.css
+++ b/style.css
@@ -191,7 +191,7 @@
     border-left: 6px solid var(--purple);
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 40px;
 }
 
 .card.purple h3{
@@ -247,6 +247,29 @@ hr{
     grid-column: 2 / 3;
 }
 
+.trending .white.card{
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+}
+
 .trending img{
     width: 30px;
+}
+
+.user{
+    display: flex;
+    gap: 10px;
+    align-items: center;
+}
+
+.user .username{
+    font-weight: 100;
+    font-size: 12px;
+}
+
+.user .title{
+    font-size: 12px;
+    color: gray;
 }
